assets/css/releases/main.scss
---
---

@use "footer";
@import "./reset.css";
@import "./components/hero.css";
@import "./components/toc.css";
@import "./components/section.css";
@import "./components/card.css";
@import "./components/media_block.css";
@import "./components/gdquest.css";
@import "./components/donation_card.css";
@import "./components/migration_card.css";

/* TODO: Improve color names */

:root {
  color-scheme: light dark;

  --dark-text-color: #FBFBFF;
  --light-text-color: #09090a;

  --dark-bg-color: #17191a;
  --light-bg-color: #e8ebef;

  --dark-card-bg-color: #25282B;
  --light-card-bg-color: #fbfdff;


  --main-text-color: #FBFBFF;
  --main-bg-color: #17191a;
  --card-bg-color: #25282B;

  --body-text-color: light-dark(var(--light-text-color), var(--dark-text-color));

  --accent-color: #1684D4;
  --accent-color-hover: #41A6F0;
  --blank-color: #282828;
  --color-godot: #478cbf;
  --color-godot-but-a-little-brighter: #56abe9;
  --color-godot-but-even-brighter: #5fbbff;
  --color-godot-but-darker: #7998af;
  --color-godot-but-desaturated: #a9d7f9;

  --font-family: 'SplineSans', 'Roboto', 'Arial', sans-serif;
  --xxs: 0.2em;
  --xs: 0.4em;
  --s: 0.6em;
  --m: 1em;
  --l: 1.6em;
  --xl: 2.6em;
  --xxl: 4.2em;

  /* Duplicate from main website css to avoid importing everything*/
  --button-border-radius: 12px;

  --link-color: hsl(206, 58%, 50%);
  --navbar-background-color: #ffffff;
  --navbar-link-color: var(--dark-color);
  --primary-color: hsl(206, 58%, 52%);
  --navbar-link-current-color: var(--primary-color);
}

@media (prefers-color-scheme: dark) {
  :root {
  --navbar-background-color: #333639;
  --link-color: hsl(200, 60%, 70%);
  --navbar-link-color: hsla(0, 0%, 100%, 0.9);
  --navbar-link-current-color: hsl(200, 100%, 80%);
  }
}

@font-face {
    font-family: "SplineSans";
    src: url("../../fonts/SplineSans-VariableFont_wght.ttf");
    font-weight: 100 1000;
    font-display: swap;
}

html {
    height: 100%;
    font-weight: 400;
}

body {
  margin: 0;
  font-family: var(--font-family);
  min-height: 100%;
  color: var(--body-text-color);
  background-color: light-dark(var(--light-bg-color), var(--dark-bg-color));
  font-size: 0.8em;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  text-decoration: underline;
  text-underline-offset: 0.2em;
  text-decoration-thickness: 0.1em;
  color: var(--body-text-color);
  &:hover {
    text-underline-offset: 0.3em;
  }
}

.btn{
  position: relative;
  transition: transform 0.4s ease-out;
  color: var(--main-text-color);
  font-weight: 600;
  border-radius: 10.0em;
  text-decoration: none;
  display: inline-block;
  padding: 0.8em 1.0em;
  overflow: hidden;
  vertical-align:middle;
  z-index: 1;
  &.blue::after{
    background: linear-gradient(0deg, black 20%, #185FE7 80%);
  }
  &.red::after{
    background: linear-gradient(0deg, light-dark(var(--light-bg-color), var(--dark-bg-color)) 20%, #ff428e 80%);
  }
  &::after{
    transition: transform 0.8s ease-out;
    content: "";
    display: block;
    position: absolute;
    top: 50%;
    left: 50%;
    width: 100%;
    height: auto;
    aspect-ratio: 1;
    z-index: -1;
    transform: translate(-50%, -50%) rotate(15deg);
  }
  &:hover::after{
    transform: translate(-50%, -50%) rotate(-15deg);
    opacity: 100%;
  }
  
  &:hover{
    transform: scale(1.05);
  }
}

.gap-xxs{ gap: var(--xxs);}
.gap-xs{ gap: var(--xs);}
.gap-s{ gap: var(--s);}
.gap-m{ gap: var(--m);}
.gap-l{ gap: var(--l);}
.gap-xl{ gap: var(--xl);}
.gap-xxl{ gap: var(--xll);}

.mb-xxs{ margin-bottom: var(--xxs);}
.mb-xs{ margin-bottom: var(--xs);}
.mb-s{ margin-bottom: var(--s);}
.mb-m{ margin-bottom: var(--m);}
.mb-l{ margin-bottom: var(--l);}
.mb-xl{ margin-bottom: var(--xl);}
.mb-xxl{ margin-bottom: var(--xll);}


.flex{display: flex;}
.flex-col{flex-direction: column;}
.flex-row{flex-direction: row;}
.items-center{align-items: center;}
.flex-wrap{flex-wrap: wrap;}
.hidden{display: none;}

#main-nav{
  z-index: 20;
  position: absolute;
  width: 100%;

  .wrapper{
    margin: auto;
    max-width: 1400px;
    width: 100%;
  }
}

.preamble{
  margin-top: 4em;
  margin-bottom: 4em;
  padding: 0 2em;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: justify;
  font-size: 1.15em;
  hyphens: auto;
  gap: var(--s);
  p{
    max-width: 70ch;
  }
}

.quote{
  display: flex;
  flex-direction: column;
  max-width: 70ch;
  font-size: 1.0em;
  align-self: center;
  color: light-dark(var(--accent-color), var(--color-godot-but-desaturated));
  font-size: 1.2rem;
  .text p {
    text-align: justify;
    hyphens: auto;
    margin-bottom: 0.8em;
  }
  .text p:first-child:before{
    font-size: 1.8em;
    opacity: 60%;
    content: "“";
    padding-right: 0.2em;
  }
  .text p:last-child::after{
    font-size: 1.8em;
    opacity: 60%;
    content: "”";
    padding-left: 0.2em;
  }
  a{
    color: light-dark(var(--accent-color), var(--color-godot-but-desaturated));
  }
  .text{
    margin-bottom: 1em;
  }
  .author{
    align-self: end;
    .role{
      opacity: 60%;
    }
  }
}

.contributors-wall{
    width: 100%;
    margin-bottom: var(--xxl);
    text-align: center;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    line-height: 2.5em;
    a {
      padding: 0 0.2em;
      margin: 0 0.3em;
      align-self: center;
      text-decoration: none;
      font-weight: 400;
      opacity: 80%;
      color: var(--body-text-color);
      &:hover{
        opacity: 100%;
      }
      &.scale-1{font-size: 0.9em;}
      &.scale-2{font-size: 1.0em;}
      &.scale-3{font-size: 1.4em;}
      &.scale-4{font-size: 1.6em;}
      &.scale-5{font-size: 1.8em;}
    }
}

#credits{
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 8em;
  margin-bottom: 8em;
  text-align: center;
  .title{
    font-size: 1.6em;
    margin-bottom: 2.0em;
  }
  .content{
    font-size: 1.2em;
    max-width: 70ch;
    .item-title{
      margin-top: 1.2em;
      margin-bottom: 0.8em;
      font-weight: 400;
      opacity: 80%;
    }
    .by{
      margin-bottom: 1.4em;
      font-weight: 500;
    }
  }
}

@media (min-width: 620px) {
  #toc-nav{
    left: 2em;
    transform: none;
  }

  .hero{
    min-height: 80vh;
    justify-content: center;
    .content{
      position:relative;
      margin-top: 0;
      max-width: 1400px;
      align-items: start;
      font-size: 1.2em;
    }
    .btn{
      font-size: 1.0em;
    }
    .header{
      display: block;
      text-align: left;
    }
  }

}

@media (max-width: 1920px) {
  .section-body{
    padding: 0 1em;
    max-width: min(100%, 1200px);
  }
}

@media (min-width: 1200px) {
  .hero{
    .content{
      font-size: 1.4em;
    }
  }
  body{
    font-size: 0.9em;
  }
  .preamble{
    font-size: 1.4em;
  }
  .section-header{
    font-size: 1.6em;
  }
  .section-body{
    .sub-grid{
      flex-direction: row;
    }
    .sub-section{
      font-size: 2.0em;
    }
  }
  .card{
    .content{
      padding: 2.0em 2.2em;
    }
    &.large{
      .body{
        columns: 2;
      }
    }
    &.reverse{
      flex-direction: column-reverse;
    }
    &.medium{
      flex-direction: row;
        .content{
          max-width: 60ch;
        }
        &.reverse{
          flex-direction: row-reverse;
        }
    }
    .title{
      font-size: 2.4rem;
    }
    .subtitle{
      font-size: 1.6rem;
    }
  }
}

@media (min-width: 1400px) {
  .hero{
    .content{
      font-size: 1.6em;
    }
  }
  .section-body{
    max-width: min(100%, 1400px);
  }
}

#draft-warning{
  color: var(--main-text-color);
  position: sticky;
  width: 100%;
  background-color: #ff428e;
  top: 0;
  z-index: 100;
  font-weight: 600;
  font-size: 1.2rem;
  padding: 1em;
  text-align: center;
}

/* 
 * Taken from 
 * https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Elements/kbd#try_it 
 * and tweaked a little bit.
 */
kbd > kbd {
  background-color: #eeeeee;
  border-radius: 3px;
  border: 1px solid #b4b4b4;
  box-shadow:
    0 1px 1px rgb(0 0 0 / 0.2),
    0 2px 0 0 rgb(255 255 255 / 0.7) inset;
  color: #333333;
  display: inline-block;
  position: relative;
  top: -2px;
  font-size: 0.85em;
  font-weight: bold;
  line-height: 1;
  padding: 2px 4px;
  white-space: nowrap;
}

